Se hacen modificaciones en la seccion de la galeria, seagregan nuevas imagenes, se hacen modificaciones en la seccion de avance de obra, se modifica la seccion para agregar mas imagenes del avance de obra, se envia a produccion

--- a/style/galeria.css
+++ b/style/galeria.css
@@ -37,7 +37,8 @@
   transform: translate(-50%);
 }
 
-#galery {
+#galery,
+.galery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
